Logo chnages,and other new things added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2804,6 +2804,10 @@
 		}
 
 /* Goto Next */
+#logo img{
+	max-width: 200px !important;
+	margin: 5px;
+}
 
 	.goto-next {
 		border: 0;
@@ -3284,7 +3288,7 @@
 
 					#header nav ul li a, #header nav ul li span {
 						border: 0;
-						color: inherit;
+						color: #fff;
 						display: inline-block;
 						height: inherit;
 						line-height: inherit;
@@ -3324,7 +3328,7 @@
 	#banner {
 		background-attachment: fixed;
 		background-color: #272833;
-		background-image: url("../../../images/banner.jpg");
+		background-image: url("../images/banner.jpg");
 		background-position: center center;
 		background-size: cover;
 		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
