--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1602,6 +1602,9 @@
 	padding: 0px !important;
 	max-width: 120px;
 }
+.navbar-default .navbar-nav > li > a{
+	color: #fff !important;
+}
 
 	.goto-next {
 		border: 0;
@@ -2043,10 +2046,6 @@
 		}
 
 		#banner:after {
-			background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("../images/overlay.png");;
-			background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("../images/overlay.png");;
-			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("../images/overlay.png");;
-			background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("../images/overlay.png");;
 			content: '';
 			display: block;
 			height: 100%;
@@ -2113,6 +2112,11 @@
 					top: 0;
 					color: #fff;
 				}
+
+.major h2{
+   margin-bottom: 20px;
+   padding: 10px;
+}
 /* Footer */
 
 	#footer {
