--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3146,8 +3146,19 @@
 
 
 #slides h1{
-	padding: 10px;
+	color: #fff;
+	margin-top: 0px;
+	padding: 20px;
 	font-weight: bold;
+}
+#slides p{
+	color: #fff;
+	font-weight: bold;
+}
+#slides{
+	background-color:#34495E;
+	padding-top: 40px;
+	padding-bottom: 40px;
 }
 /*-- slider --*/
 #flexiselDemo1, #flexiselDemo2, #flexiselDemo3 {
@@ -3212,4 +3223,156 @@ ul#flexiselDemo1 li a h4:hover{
 .nbs-flexisel-nav-right {
 	right: 0px;
 	background: url(../images/img-sprite-left-right.png) no-repeat -54px 0px;
+}
+
+/*Contact*/
+/* Contact start */
+.contact{
+	background: #34495E;
+	padding:150px 0px;
+}
+.contact h1{
+	text-align: center !important;
+	color:#fff !important;
+	padding-bottom: 20px;
+}
+.contact-row{
+	padding:0px 0px;
+}
+.contact-row-left h3{
+	 color:#fff;
+	 padding:20px 0px;
+	 font-family: 'Montserrat', sans-serif;
+	 font-weight: 400;			
+}
+.contact-row-left p{
+	 color:rgba(255, 255, 255, 0.56);
+	 line-height: 1.6em;
+	 padding-top:0px;
+	 font-weight: 400;
+	 font-size:0.875em;			
+}
+.contact-row-left p.add-mark{
+	 padding-top:20px;
+	 color: rgba(255, 255, 255, 0.8);
+	 padding:1em 0 0.5em;
+}
+.contact-row-left p.cel-mark{
+	 padding:0px;
+	 color: rgba(255, 255, 255, 0.8);
+	 padding:0.5em 0;
+  
+}
+.contact-row-left p.ema-mark a{
+	 padding:0px;
+	 color: #1abc9c; 
+	 text-decoration:none;
+	 padding:0.5em 0;
+}
+.contact-row-left p.add-mark span{
+	margin-right:10px; 
+			
+}
+.contact-row-left p.ema-mark span{
+	margin-right:10px;
+			
+}
+.contact-row-left p.cel-mark span{
+	margin-right:10px;
+			 
+}
+.contact-row-right {
+ 	
+}
+.form-row1 input[type="text"]{
+	outline: none;
+ 	width:45.5%;
+ 	margin-right: 1em;
+ 	border:0px;
+ 	padding:15px 10px;
+ 	border-radius:5px;
+ 	background:#5D6D7E;
+ 	outline:none;
+	-webkit-appearance:none;
+	color: rgba(255, 255, 255, 0.8);
+}
+.form-row2 select{
+ 	border:0px;
+ 	margin:10px 0;
+ 	margin-right: 1em;
+ 	width: 94.5%;
+ 	height: 45px;
+ 	padding:0 10px;
+ 	border-radius: 5px;
+ 	overflow: hidden;
+ 	outline: none;
+ 	background:url(../images/arw.png)no-repeat #5D6D7E 98%;
+ 	-webkit-appearance: none;
+ 	cursor: pointer;
+ 	outline:none;
+	-webkit-appearance:none;
+	color: rgba(255, 255, 255, 0.8);
+}
+textarea{
+	border: 0px;
+	outline:none;
+	margin-right: 1em;
+	padding:20px 10px;
+	border-radius:5px;
+	background:#5D6D7E;
+	width: 94.5%;
+	resize: none;
+	height:158px;
+	outline:none;
+	-webkit-appearance:none;
+	color: rgba(255, 255, 255, 0.8);
+}
+.form-row3 {
+	text-align: right;
+	margin-right: 2em;
+}
+.form-row3 input[type="submit"]{
+	 padding:20px 60px;
+	 background:#3498DB;
+	 color: rgba(255, 255, 255, 0.86);
+	 border:0px;
+	 border-radius:4px;
+	 outline:none;
+	 margin:10px 2px;
+	 font-family: 'Montserrat', sans-serif;
+	 font-weight: 400;
+	 font-size:18px;
+ 
+}
+.col-md-6 slide-content-class4-left{
+	vertical-align: middle;
+}
+.form-row3 input[type="submit"]:hover, .form-row3 input[type="reset"]:hover{
+	 background:#ffffff;
+	 color: #000;
+	 transition:0.5s all;
+	-webkit-transition:0.5s all;
+	-moz-transition:0.5s all;
+	-ms-transition:0.5s all;
+	-o-transition:0.5s all;
+}
+.contact-row-left p.ema-mark a:hover, .footer-top p a:hover{
+	color:#fff;
+	transition:0.5s all;
+	-webkit-transition:0.5s all;
+	-moz-transition:0.5s all;
+	-ms-transition:0.5s all;
+	-o-transition:0.5s all;
+}
+.form-row3 input[type="reset"]{
+	 padding:20px 60px;
+	 background:#1ABC9C;
+	 color: rgba(255, 255, 255, 0.86);
+	 border:0px;
+	 border-radius:4px;
+	 outline:none;
+	 margin:10px 20px;
+	 font-family: 'Montserrat', sans-serif;
+	 font-weight: 400;
+	 font-size:18px; 
 }
