added tarun pic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2739,6 +2739,7 @@
 
 			#thumbnails article h2, #thumbnails article p {
 				display: none;
+				opacity: .5;
 			}
 
 			#thumbnails article.active .thumbnail:before {
